I puted the images in the modal experience

--- a/index.html
+++ b/index.html
@@ -182,6 +182,43 @@
 
         <section class="main__section main__section--experiencia" id="experiencia">
 
+            <article class="card card card__transition">
+
+                <a href="./plazaPc.html" class="card__a "><img class="card__img " src="https://i.postimg.cc/FFB2SPTK/plaza-usiacuri-1.jpg" alt="Imagen de Usiacuri"> </a>
+
+                <div class="card__info ">
+                    <a href="./plazaPc.html" class="card__infoContent">
+
+                        <h2 class="card__h2" > Plaza Puerto Colombia y Usiacurí</h2>
+
+                        <section class="card__description">
+
+                            <p class="card__p">Nuestra empresa supervisó la interventoría técnica, administrativa, financiera y ambiental (2020-2022) para la construcción y ampliación de plazas y mejora del espacio público en Puerto Colombia y Usiacurí, Atlántico, enriqueciendo la infraestructura comunitaria y el bienestar ciudadano.</p>
+
+                        </section>
+                    </a>
+
+                </div>
+            </article>
+
+            <article class="card card card__transition">
+
+                <a href="/Carepa.html" class="card__a "><img class="card__img " src="https://i.postimg.cc/ZYy7yJ2W/Whats-App-Image-2024-02-26-at-2-07-43-PM-3.jpg" alt="Foto de proyecto en carepa"> </a>
+
+                <div class="card__info ">
+                    <a href="/Carepa.html" class="card__infoContent">
+
+                        <h2 class="card__h2" >Mantenimiento y rehabilitación de corredores viales (Carepa)</h2>
+
+                        <section class="card__description">
+
+                            <p class="card__p"> Realizamos estudios técnicos y diseños para el contrato EDU-IA-OP-009-2023 en Carepa, Antioquia, enfocados en el mejoramiento, mantenimiento y rehabilitación de corredores viales, contribuyendo significativamente a la optimización de la infraestructura vial del municipio.
+                        </section>
+                    </a>
+
+                </div>
+            </article>
+
             <article class="card card__transition ">
 
                 <a href="./arroyo91.html" class="card__a "><img class="card__img " src="https://i.ibb.co/WDg34vb/calle-91-1.jpg" alt="En esta imagen es de la canalizacion del arrroyo de la 91"> </a>
@@ -195,6 +232,46 @@
 
                             <p class="card__p">
                                 Como empresa de ingeniería, realizamos la interventoría técnica, administrativa, ambiental y financiera en Barranquilla (2017-2019), para la implementación de estrategias que reducen el caudal de escorrentía superficial del Arroyo entre las calles 92 y 91, mejorando la infraestructura urbana.</p>
+
+                        </section>
+                    </a>
+
+                </div>
+            </article>
+
+            <article class="card card card__transition">
+
+                <a href="/CarmenDeAtrato.html" class="card__a "><img class="card__img " src="https://i.postimg.cc/d0FxmgM8/pav-calle-hospital-Carmen-de-Atrato-5.png" alt="Fotos de mejoramiento Carmen de atrato "> </a>
+
+                <div class="card__info ">
+                    <a href="/CarmenDeAtrato.html" class="card__infoContent">
+
+                        <h2 class="card__h2" >Mantenimiento y conservación de la vía El Carmen - La Argelia</h2>
+
+                        <section class="card__description">
+
+                            <p class="card__p">
+                                En 2014, nuestra empresa lideró el mejoramiento, mantenimiento y conservación de la vía El Carmen - La Argelia, sector La Y - Argelia parte alta, en El Carmen de Atrato, Chocó, asegurando la infraestructura vial para mejorar la conectividad y el transporte regional.
+                            </p>
+
+                        </section>
+                    </a>
+
+                </div>
+            </article>
+            
+            <article class="card card card__transition">
+
+                <a href="./VarianteSabaLarga.html" class="card__a "><img class="card__img " src="https://i.ibb.co/xgP3tB6/variante-Sabanalarga.jpg" alt="Fotos de la variante sabanalarga"> </a>
+
+                <div class="card__info ">
+                    <a href="./VarianteSabaLarga.html" class="card__infoContent">
+
+                        <h2 class="card__h2" >Variante Sabanalarga</h2>
+
+                        <section class="card__description">
+
+                            <p class="card__p">Nuestro equipo realizó la interventoría técnica, administrativa, financiera y ambiental (2018-2022) para el mejoramiento de vías en Sabanalarga, Atlántico, incluyendo variantes y empalmes urbanos y secundarios hacia Manatí y Cascajal, y la intersección Piojo, fortaleciendo la infraestructura vial regional.</p>
 
                         </section>
                     </a>
@@ -222,24 +299,6 @@
                 </div>
             </article>
 
-            <article class="card card card__transition">
-
-                <a href="./VarianteSabaLarga.html" class="card__a "><img class="card__img " src="https://i.ibb.co/xgP3tB6/variante-Sabanalarga.jpg" alt="Fotos de la variante sabanalarga"> </a>
-
-                <div class="card__info ">
-                    <a href="./VarianteSabaLarga.html" class="card__infoContent">
-
-                        <h2 class="card__h2" >Variante Sabanalarga</h2>
-
-                        <section class="card__description">
-
-                            <p class="card__p">Nuestro equipo realizó la interventoría técnica, administrativa, financiera y ambiental (2018-2022) para el mejoramiento de vías en Sabanalarga, Atlántico, incluyendo variantes y empalmes urbanos y secundarios hacia Manatí y Cascajal, y la intersección Piojo, fortaleciendo la infraestructura vial regional.</p>
-
-                        </section>
-                    </a>
-
-                </div>
-            </article>
 
             <article class="card card card__transition">
 
@@ -262,73 +321,35 @@
 
             <article class="card card card__transition">
 
-                <a href="./muroTierraArmada.html" class="card__a "><img class="card__img " src="https://media.istockphoto.com/id/628766138/es/foto/planta-de-refiner%C3%ADa-de-petr%C3%B3leo-al-amanecer-con-fondo-de-cielo.jpg?s=1024x1024&w=is&k=20&c=9QG5gCPxY9nCg5EZPGW9aYEMc_QmEMGJm9nMXSka_30=" alt="In this picture, there is background code "> </a>
-
-                <div class="card__info ">
-                    <a href="./muroTierraArmada.html" class="card__infoContent">
-
-                        <h2 class="card__h2" >Interventoría</h2>
-
-                        <section class="card__description">
-
-                            <p class="card__p">En DVP, somos la columna vertebral de cada proyecto, asegurando una ejecución impecable mediante una supervisión rigurosa. Nuestro enfoque garantiza la máxima calidad y eficiencia, superando expectativas y estableciendo nuevos estándares de excelencia.</p>
-
-                        </section>
-                    </a>
-
-                </div>
-            </article>
-
-            <article class="card card card__transition">
-
-                <a href="./placaHuella.html" class="card__a "><img class="card__img " src="https://media.istockphoto.com/id/628766138/es/foto/planta-de-refiner%C3%ADa-de-petr%C3%B3leo-al-amanecer-con-fondo-de-cielo.jpg?s=1024x1024&w=is&k=20&c=9QG5gCPxY9nCg5EZPGW9aYEMc_QmEMGJm9nMXSka_30=" alt="In this picture, there is background code "> </a>
-
-                <div class="card__info ">
-                    <a href="./placaHuella.html" class="card__infoContent">
-
-                        <h2 class="card__h2" >Interventoría</h2>
-
-                        <section class="card__description">
-
-                            <p class="card__p">En DVP, somos la columna vertebral de cada proyecto, asegurando una ejecución impecable mediante una supervisión rigurosa. Nuestro enfoque garantiza la máxima calidad y eficiencia, superando expectativas y estableciendo nuevos estándares de excelencia.</p>
-
-                        </section>
-                    </a>
-
-                </div>
-            </article>
-
-            <article class="card card card__transition">
-
-                <a href="./plazaPc.html" class="card__a "><img class="card__img " src="https://media.istockphoto.com/id/628766138/es/foto/planta-de-refiner%C3%ADa-de-petr%C3%B3leo-al-amanecer-con-fondo-de-cielo.jpg?s=1024x1024&w=is&k=20&c=9QG5gCPxY9nCg5EZPGW9aYEMc_QmEMGJm9nMXSka_30=" alt="In this picture, there is background code "> </a>
+                <a href="./plazaPc.html" class="card__a "><img class="card__img " src="https://i.postimg.cc/FFB2SPTK/plaza-usiacuri-1.jpg" alt="Imagen de Usiacuri"> </a>
 
                 <div class="card__info ">
                     <a href="./plazaPc.html" class="card__infoContent">
 
-                        <h2 class="card__h2" >Interventoría</h2>
+                        <h2 class="card__h2" > Plaza Puerto Colombia y Usiacurí</h2>
 
                         <section class="card__description">
 
-                            <p class="card__p">En DVP, somos la columna vertebral de cada proyecto, asegurando una ejecución impecable mediante una supervisión rigurosa. Nuestro enfoque garantiza la máxima calidad y eficiencia, superando expectativas y estableciendo nuevos estándares de excelencia.</p>
+                            <p class="card__p">Nuestra empresa supervisó la interventoría técnica, administrativa, financiera y ambiental (2020-2022) para la construcción y ampliación de plazas y mejora del espacio público en Puerto Colombia y Usiacurí, Atlántico, enriqueciendo la infraestructura comunitaria y el bienestar ciudadano.</p>
 
                         </section>
                     </a>
 
                 </div>
-            </article>
+            </article>        
 
             <article class="card card card__transition">
 
-                <a href="./riohachaEstadio.html" class="card__a "><img class="card__img " src="https://media.istockphoto.com/id/628766138/es/foto/planta-de-refiner%C3%ADa-de-petr%C3%B3leo-al-amanecer-con-fondo-de-cielo.jpg?s=1024x1024&w=is&k=20&c=9QG5gCPxY9nCg5EZPGW9aYEMc_QmEMGJm9nMXSka_30=" alt="In this picture, there is background code "> </a>
+                <a href="/placaHuella.html" class="card__a" ><img class="card__img " src="https://i.ibb.co/0mpjbf6/pavimento-placa-huella-santa-lucia3.jpg" alt="Mejoramiento de vias Santa Lucia"> </a>
 
                 <div class="card__info ">
-                    <a href="./riohachaEstadio.html" class="card__infoContent">
+                    <a href="/placaHuella.html " class="card__infoContent">
 
-                        <h2 class="card__h2" >Interventoría</h2>
+                        <h2 class="card__h2" >Mejoramiento del empalme de vías (Santa Lucia)</h2>
 
                         <section class="card__description">
 
-                            <p class="card__p">En DVP, somos la columna vertebral de cada proyecto, asegurando una ejecución impecable mediante una supervisión rigurosa. Nuestro enfoque garantiza la máxima calidad y eficiencia, superando expectativas y estableciendo nuevos estándares de excelencia.</p>
+                            <p class="card__p">En 2014-2015, llevamos a cabo el mejoramiento del empalme de vías de acceso al municipio de Santa Lucía con la carretera Santa Lucía - Oriente, en Atlántico, mejorando la conectividad y facilitando el tránsito hacia y desde el municipio, promoviendo el desarrollo local.</p>
 
                         </section>
                     </a>
@@ -336,24 +357,6 @@
                 </div>
             </article>
 
-            <article class="card card card__transition">
-
-                <a href="./VarianteSabaLarga.html" class="card__a "><img class="card__img " src="https://media.istockphoto.com/id/628766138/es/foto/planta-de-refiner%C3%ADa-de-petr%C3%B3leo-al-amanecer-con-fondo-de-cielo.jpg?s=1024x1024&w=is&k=20&c=9QG5gCPxY9nCg5EZPGW9aYEMc_QmEMGJm9nMXSka_30=" alt="In this picture, there is background code "> </a>
-
-                <div class="card__info ">
-                    <a href="./VarianteSabaLarga.html" class="card__infoContent">
-
-                        <h2 class="card__h2" >Interventoría</h2>
-
-                        <section class="card__description">
-
-                            <p class="card__p">En DVP, somos la columna vertebral de cada proyecto, asegurando una ejecución impecable mediante una supervisión rigurosa. Nuestro enfoque garantiza la máxima calidad y eficiencia, superando expectativas y estableciendo nuevos estándares de excelencia.</p>
-
-                        </section>
-                    </a>
-
-                </div>
-            </article>
         </section>
 
         <section class="main__section main__section--contacto" id="contactos">
