--- a/CarmenDeAtrato.html
+++ b/CarmenDeAtrato.html
@@ -3,23 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Plaza Puerto Colombia">
+    <meta name="description" content="Muro de contención tierra alta">
     <meta name="robots" content="index, follow">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Plaza Puerto Colombia</title>
+    <title>Muro de contención tierra alta</title>
     <link rel="stylesheet" href="css/desktop.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <meta name="x:card" content="summary">
-    <meta property="og:title"  content="Plaza Puerto Colombia" >
+    <meta property="og:title"  content="Muro de contención tierra alta" >
     <meta property="og:image"  content="https://i.postimg.cc/W4dbZwN2/Dvp-logo-recortado.jpg">
     <meta property="og:url"  content="https://dvp.com.co/">
-    <meta name="x:title" content="Plaza Puerto Colombia" >
+    <meta name="x:title" content="Muro de contención tierra alta" >
     <meta name="x:image" content="https://i.postimg.cc/W4dbZwN2/Dvp-logo-recortado.jpg">
     <meta name="x:url" content="https://dvp.com.co/">
-    <meta property="og:description" content="Plaza Puerto Colombia">
-    <meta name="twitter:description" content="Plaza Puerto Colombia">
+    <meta property="og:description" content="Muro de contención tierra alta">
+    <meta name="twitter:description" content="Muro de contención tierra alta">
     <meta name="og:type" content="website">
     <link rel="apple-touch-icon" sizes="57x57" href="https://i.postimg.cc/kXPRW4h0/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="https://i.postimg.cc/XJyXCSKN/apple-icon-60x60.png">
@@ -44,10 +44,10 @@
     <main class="main--fotos">
         <section class="grid-section">
             <!-- Ejemplo de elementos dentro de la grid -->
-            <div class="grid-section__item grid-section__item--usiacuri"></div>
-            <div class="grid-section__item grid-section__item--usiacuri"></div>
-            <div class="grid-section__item grid-section__item--usiacuri"></div>
-            <div class="grid-section__item grid-section__item--usiacuri"></div>
+            <div class="grid-section__item grid-section__item--carmenDeAtrato"></div>
+            <div class="grid-section__item grid-section__item--carmenDeAtrato"></div>
+            <div class="grid-section__item grid-section__item--carmenDeAtrato"></div>
+            <div class="grid-section__item grid-section__item--carmenDeAtrato"></div>
             <!-- Agrega más elementos según sea necesario -->
         </section>
         <a href="index.html#experiencia" class="close-button">X</a>
