--- a/VarianteSabaLarga.html
+++ b/VarianteSabaLarga.html
@@ -46,6 +46,8 @@
             <!-- Ejemplo de elementos dentro de la grid -->
             <div class="grid-section__item grid-section__item3"></div>
             <div class="grid-section__item grid-section__item3"></div>
+            <div class="grid-section__item grid-section__item3"></div>
+            <div class="grid-section__item grid-section__item3"></div>
         
             <!-- Agrega más elementos según sea necesario -->
         </section>
