I am fixed the head

--- a/index.html
+++ b/index.html
@@ -22,23 +22,19 @@
     <meta property="og:description" content="DVP: Expertos en ingeniería en Colombia. Ofrecemos diseño vial, interventoría de obras y análisis de suelos. Contáctanos para soluciones especializadas con un equipo de especialistas cualificados.">
     <meta name="twitter:description" content="DVP: Expertos en ingeniería en Colombia. Ofrecemos diseño vial, interventoría de obras y análisis de suelos. Contáctanos para soluciones especializadas con un equipo de especialistas cualificados.">
     <meta name="og:type" content="website">
-    <link rel="apple-touch-icon" sizes="57x57" href="https://i.postimg.cc/kXPRW4h0/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="https://i.postimg.cc/XJyXCSKN/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="https://i.postimg.cc/XJ06QRSY/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="https://i.postimg.cc/ZRL2j0xw/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="https://i.postimg.cc/gkL42nL1/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="https://i.postimg.cc/Hk4wr5Yv/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="https://i.postimg.cc/j5CP3FzB/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="https://i.postimg.cc/YqFz3s7h/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="https://i.postimg.cc/W45GzRGf/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="https://i.postimg.cc/J7Kvm0GK/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="https://i.postimg.cc/DzRzBBnw/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="https://i.postimg.cc/28sw-fNF2/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="https://i.postimg.cc/PfWqQWcd/favicon-16x16.png">
-    <link rel="manifest" href="/asset/favicon/manifest.json">
-    <meta name="msapplication-TileColor" content="#000000">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+
+
+  
     <meta name="msapplication-TileImage" content="https://i.postimg.cc/j5CP3FzB/apple-icon-144x144.png">
-    <meta name="theme-color" content="#000000">
+
 
 </head>
 <body>
