The movil menu is working

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                
             </div>
 
-            <div class="header__hamburguer">
+            <div class="header__hamburguer header__hamburguerAfter">
                 <div class="header__hamburguerSons header__hamburguerSons1 "></div>
                 <div class="header__hamburguerSons header__hamburguerSons2 "></div>
                 <div class="header__hamburguerSons header__hamburguerSons3 "></div>
@@ -67,10 +67,11 @@
 
             <div class="mobileMenu innactive">
                 <ul class="mobilMenu__ul">
-                    <li class="mobilMenu__li"><a href="./index.html" class="mobilMenu__a">Home</a></li>
-                    <li class="header__li"><a href="./Aboutme.html" class="mobilMenu__a">About me</a></li>
-                    <li class="mobilMenu__li"><a href="./portafolio.html" class="mobilMenu__a">Portafolio</a></li>
-                    <li class="mobilMenu__li"><a href="./tutorial.html" class="mobilMenu__a">Tutorials</a></li>
+                    <li class="mobilMenu__li"><a href="#home" class="mobilMenu__a">Home</a></li>
+                    <li class="header__li"><a href="#dvp" class="mobilMenu__a">Dvp</a></li>
+                    <li class="mobilMenu__li"><a href="#servicios" class="mobilMenu__a">Servicios</a></li>
+                    <li class="mobilMenu__li"><a href="#experiencia" class="mobilMenu__a">Experiencia</a></li>
+                    <li class="mobilMenu__li"><a href="#contactos" class="mobilMenu__a">Contacto</a></li>
                 </ul>
                 
             </div>
