I did the empresas que confian en nosotros section

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         
         <section class="main__section main__section--empresasQueConfian" >
 
-            <div class="empresas-fijo">Empresas que confían en DVP:</div>
+            <p class="empresas-fijo">Empresas que confían <br> en DVP:</p>
             <div class="empresas-desplazamiento">
                 <span class="empresas-desplazamiento__span empresas-desplazamiento__span1"></span>
                 <span class="empresas-desplazamiento__span empresas-desplazamiento__span3"></span>
