I fixed the problem with tilde

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         
         <section class="wrappa__son">
 
-            <h1 class="main__section--presentacion--son">Diseños Vias y Pavimentos S.A.S</h1>
+            <h1 class="main__section--presentacion--son">Diseños Vías y Pavimentos S.A.S</h1>
             <p class="main__section--presentacion--son">Servicio de interventorías, construcción, laboratorios, estudios y <br> diseños.</p>
             <a href="#contactos" class="contact-button main__section--presentacion--son">Contacto</a>
 
